--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,9 @@
 [project]
 name = "alieninvasion"
 version = "0.1.0"
-description = "Add your description here"
+description = "Alien Invasion using pygame"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = ["pygame>=2.6.1"]
+[[tool.uv.index]]
+url = "https://repos.verz.local/artifactory/api/pypi/python-hosted/simple"
